--- a/assets/config/PolylidarParams.yaml
+++ b/assets/config/PolylidarParams.yaml
@@ -11,7 +11,7 @@ mesh:
 polylidar: # Parameters we send to polylidar. Determine plane and polygon extraction from point clouds.
   alpha: 0.0 # must be set to 0.0 if using lmax
   lmax: 1.5 # maximum distance between points in plane for spatial connection
-  z_thresh: 0.2 # enforce point to plane distance constraints during region growing.
+  z_thresh: 0.3 # enforce point to plane distance constraints during region growing.
   norm_thresh: 0.96 # Not used, set to the same as norm_thresh_min. Will deprecate later.
   norm_thresh_min: 0.96 # triangles must have a minimum amount of planarity.
   min_hole_vertices : 4 # minimum number of vertices in a hole to return
@@ -39,6 +39,7 @@ polygon:
         min: 4
       plane_area:
         min: 4 # m^2
+        max: 400 
     # These parameters correspond to Shapely polygon geometry operations
     positive_buffer: 0.1 # m, Positively expand polygon.  Fills in small holes
     negative_buffer: 0.2 # m, Negative buffer to polygon. Expands holes and constricts outer hull of polygon
